tests/snapshots/pre_reduce_run@examples::arithmetic.snap
---
source: tests/tests.rs
expression: output
input_file: examples/arithmetic.hvm
---
(#1{$([/] $(a b)) $([%] $(c d))} (#2{a c} {b d}))
pre-reduce:
RWTS   :               5
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               5
- OPER :               0
run:
RWTS   :              18
- ANNI :               4
- COMM :               0
- ERAS :               0
- DREF :              14
- OPER :               0
