tests/snapshots/pre_reduce_run@examples::lambda_calculus::hoas.snap
---
source: tests/tests.rs
expression: output
input_file: examples/lambda_calculus/hoas.hvm
---
(((a (((* a) b) (* (* b)))) c) (* (* c)))
pre-reduce:
RWTS   :             225
- ANNI :             109
- COMM :               0
- ERAS :               0
- DREF :             116
- OPER :               0
run:
RWTS   :             598
- ANNI :             331
- COMM :              11
- ERAS :             141
- DREF :             115
- OPER :               0
