tests/snapshots/pre_reduce_run@examples::machine_u32::num_match.snap
---
source: tests/tests.rs
expression: output
input_file: examples/machine_u32/num_match.hvm
---
#9
pre-reduce:
RWTS   :               2
- ANNI :               1
- COMM :               0
- ERAS :               0
- DREF :               1
- OPER :               0
run:
RWTS   :               8
- ANNI :               3
- COMM :               0
- ERAS :               1
- DREF :               3
- OPER :               1
