tests/snapshots/pre_reduce_run@examples::sort::radix::radix_sort_ctr.snap
---
source: tests/tests.rs
expression: output
input_file: examples/sort/radix/radix_sort_ctr.hvm
---
16252928
pre-reduce:
RWTS   :             150
- ANNI :              63
- COMM :               0
- ERAS :               0
- DREF :              87
- OPER :               0
run:
RWTS   :     988_282_897
- ANNI :     549_453_814
- COMM :      53_477_380
- ERAS :     203_423_749
- DREF :     123_207_689
- OPER :      58_720_265
