tests/snapshots/pre_reduce_run@examples::sort::radix::radix_sort_lam.snap
---
source: tests/tests.rs
expression: output
input_file: examples/sort/radix/radix_sort_lam.hvm
---
~549755289600
pre-reduce:
RWTS   :             153
- ANNI :              63
- COMM :               0
- ERAS :               0
- DREF :              90
- OPER :               0
run:
RWTS   :   1_134_559_233
- ANNI :     622_854_123
- COMM :      28_311_560
- ERAS :     251_658_239
- DREF :     171_966_467
- OPER :      59_768_844
