tests/snapshots/pre_reduce_run@tests::programs::chained_ops.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/chained_ops.hvm
---
2138224
pre-reduce:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
run:
RWTS   :              28
- ANNI :               2
- COMM :               4
- ERAS :               0
- DREF :               2
- OPER :              20
